--- a/style.css
+++ b/style.css
@@ -1,11 +1,28 @@
+@font-face {
+    font-family: Dracula;
+    src: url(dracula.ttf);
+}
+
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
 
+/*add a font to the page*/
+body {
+    font-family: Dracula;
+}
+
+
 .html {
     width: 100%;
+}
+
+h1 {
+    font-size: 100px;
+    color: #740000;
+    text-shadow: 2px 2px 4px;
 }
 
 a {
@@ -28,11 +45,18 @@ input {
     border: 1px solid lightblue;
     border-radius: 10px;
 }
-.txtExercice{
-    font-size:12px;
+
+.txtExercice {
+    font-size: 12px;
 }
+
 .btn {
-    width: 150px;
+    width: 50%;
+    height: 100px;
+    font-size: 40px;
+    box-shadow: 0px 0px 10px lightgray;
+    text-shadow: 2px 2px 4px #000000;
+
 }
 
 .boxAnswer {
@@ -45,6 +69,40 @@ input {
     border-radius: 10px;
     border: 1px solid lightgray
 }
+
+#textChosen {
+    animation: animTextchosen 1s ease 2s 1 normal both;
+    text-shadow: 2px 2px 4px #000000;
+}
+
+@keyframes animTextchosen {
+    0% {
+        transform: scale(0);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+#nameChosen {
+    font-size: 100px;
+    animation: animNameChosen 1s ease 4s 1 normal both;
+    text-shadow: 2px 2px 4px #000000;
+}
+
+@keyframes animNameChosen {
+    0% {
+        opacity: 0;
+        transform: translateX(250px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
 
 .copyright {
     font-size: x-small;
