--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 h1 {
-    font-size: 100px;
+    font-size: 80px;
     color: #740000;
     text-shadow: 2px 2px 4px;
 }
@@ -52,7 +52,7 @@ input {
 
 .btn {
     width: 50%;
-    height: 100px;
+    /* height: 100px; */
     font-size: 40px;
     box-shadow: 0px 0px 10px lightgray;
     text-shadow: 2px 2px 4px #000000;
