--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ input {
 
 .btn {
     width: 50%;
+    cursor: none;
     /* height: 100px; */
     font-size: 40px;
     box-shadow: 0px 0px 10px lightgray;
